Fall back to asking the AVD Manager connection
If we get a null name from the device in question

Bug: 229989431
Test: VirtualDeviceChangeListenerTest and VirtualDeviceTableModelTest
Change-Id: I283077a2e54ffffc69405d78f96e62aa048d3aaf

GitOrigin-RevId: 5c6f84db873d18ae91d96c4e18baf89b90047637