@@ -17,13 +17,19 @@ package com.android.tools.idea.devicemanager.virtualtab;
 
 import static org.junit.Assert.assertEquals;
 
-import com.android.sdklib.AndroidVersion;
 import com.android.sdklib.internal.avd.AvdInfo;
+import com.android.tools.idea.avdmanager.AvdManagerConnection;
+import com.android.tools.idea.devicemanager.CountDownLatchAssert;
+import com.android.tools.idea.devicemanager.CountDownLatchFutureCallback;
 import com.android.tools.idea.devicemanager.Key;
 import com.android.tools.idea.testing.swing.TableModelEventArgumentMatcher;
-import java.util.Collections;
+import com.google.common.util.concurrent.FutureCallback;
+import java.util.Collection;
+import java.util.List;
+import java.util.concurrent.CountDownLatch;
 import javax.swing.event.TableModelEvent;
 import javax.swing.event.TableModelListener;
+import org.jetbrains.annotations.NotNull;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
@@ -32,14 +38,44 @@ import org.mockito.Mockito;
 
 @RunWith(JUnit4.class)
 public final class VirtualDeviceTableModelTest {
+  private final @NotNull AvdInfo myAvd = Mockito.mock(AvdInfo.class);
+  private final @NotNull Collection<@NotNull VirtualDevice> myDevices = List.of(TestVirtualDevices.pixel5Api31(myAvd));
+
+  private final @NotNull TableModelListener myListener = Mockito.mock(TableModelListener.class);
+
+  @Test
+  public void setAllOnline() throws InterruptedException {
+    // Arrange
+    AvdManagerConnection connection = Mockito.mock(AvdManagerConnection.class);
+    Mockito.when(connection.isAvdRunning(myAvd)).thenReturn(true);
+
+    CountDownLatch latch = new CountDownLatch(1);
+
+    VirtualDeviceTableModel model = new VirtualDeviceTableModel(myDevices, () -> connection, (m, key) -> newSetOnline(m, key, latch));
+    model.addTableModelListener(myListener);
+
+    // Act
+    model.setAllOnline();
+
+    // Assert
+    CountDownLatchAssert.await(latch);
+    assertEquals(List.of(TestVirtualDevices.onlinePixel5Api31(myAvd)), model.getDevices());
+
+    TableModelEvent event = new TableModelEvent(model, 0, 0, VirtualDeviceTableModel.DEVICE_MODEL_COLUMN_INDEX);
+    Mockito.verify(myListener).tableChanged(ArgumentMatchers.argThat(new TableModelEventArgumentMatcher(event)));
+  }
+
+  private static @NotNull FutureCallback<@NotNull Boolean> newSetOnline(@NotNull VirtualDeviceTableModel model,
+                                                                        @NotNull Key key,
+                                                                        @NotNull CountDownLatch latch) {
+    return new CountDownLatchFutureCallback<>(VirtualDeviceTableModel.newSetOnline(model, key), latch);
+  }
+
   @Test
   public void setOnline() {
     // Arrange
-    AvdInfo avd = Mockito.mock(AvdInfo.class);
-    TableModelListener listener = Mockito.mock(TableModelListener.class);
-
-    VirtualDeviceTableModel model = new VirtualDeviceTableModel(Collections.singletonList(TestVirtualDevices.pixel5Api31(avd)));
-    model.addTableModelListener(listener);
+    VirtualDeviceTableModel model = new VirtualDeviceTableModel(myDevices);
+    model.addTableModelListener(myListener);
 
     Key key = new VirtualDeviceName("Pixel_5_API_31");
 
@@ -47,19 +83,9 @@ public final class VirtualDeviceTableModelTest {
     model.setOnline(key, true);
 
     // Assert
-    Object device = new VirtualDevice.Builder()
-      .setKey(key)
-      .setName("Pixel 5 API 31")
-      .setOnline(true)
-      .setTarget("Android 12.0 Google APIs")
-      .setCpuArchitecture("x86_64")
-      .setAndroidVersion(new AndroidVersion(31))
-      .setAvdInfo(avd)
-      .build();
-
-    assertEquals(Collections.singletonList(device), model.getDevices());
+    assertEquals(List.of(TestVirtualDevices.onlinePixel5Api31(myAvd)), model.getDevices());
 
     TableModelEvent event = new TableModelEvent(model, 0, 0, VirtualDeviceTableModel.DEVICE_MODEL_COLUMN_INDEX);
-    Mockito.verify(listener).tableChanged(ArgumentMatchers.argThat(new TableModelEventArgumentMatcher(event)));
+    Mockito.verify(myListener).tableChanged(ArgumentMatchers.argThat(new TableModelEventArgumentMatcher(event)));
   }
 }
